added a 'drafting' html for me to play with the layout

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>City Weather App</title>
  <link rel="stylesheet" type="text/css" href="src/style.css">
- <title>Current Weather</title>
 </head>
 
 <body>
-
-
 
  <script src="src/app.js"></script>
 </body>
