--- a/drafting.html
+++ b/drafting.html
@@ -27,11 +27,21 @@
 
     font-family: 'Lato', sans-serif;
     background-color: #0f4869;
+
   }
 
   #container {
     max-width: 600px;
-    background: linear-gradient(15deg, #1872a6 0%, #80d0c7 50%);
+    background: linear-gradient(15deg, #5585b5 0%, #bbe4e9 50%);
+    margin: 0 auto;
+    border-radius: 10px;
+    padding: 10px 30px 30px 10px;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
+  }
+
+  #container {
+    max-width: 600px;
+    background: linear-gradient(15deg, #5585b5 0%, #bbe4e9 100%);
     margin: 0 auto;
     border-radius: 10px;
     padding: 10px 30px 30px 10px;
@@ -131,8 +141,8 @@
     font-family: 'Courier New', Courier, monospace;
 
     a:link {
-      color: rgb(201, 210, 207);
-      text-decoration: none;
+      color: #ffffff;
+      text-decoration: underline;
 
     }
 </style>
