--- a/drafting.html
+++ b/drafting.html
@@ -21,40 +21,41 @@
   <title>City Weather App</title>
 </head>
 <style>
-  body {
+  body.cool {
     /*font-family: 'Poppins', sans-serif;*/
     /* */
 
     font-family: 'Lato', sans-serif;
     background-color: #0f4869;
+    color: #000000;
 
   }
 
-  #container {
+  body.warm {
+    /*font-family: 'Poppins', sans-serif;*/
+    /* */
+
+    font-family: 'Lato', sans-serif;
+    background-color: #fcebc5;
+    color: #000000;
+
+  }
+
+  #container.cool {
     max-width: 600px;
-    background: linear-gradient(15deg, #5585b5 0%, #bbe4e9 50%);
+    background: linear-gradient(270deg, #5585b5 0%, #bbe4e9 50%);
     margin: 0 auto;
     border-radius: 10px;
     padding: 10px 30px 30px 10px;
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.2);
   }
 
-  #container {
+  #container.warm {
     max-width: 600px;
-    background: linear-gradient(15deg, #5585b5 0%, #bbe4e9 100%);
+    background: linear-gradient(90deg, #d26330aa 0%, #ceeb76c2 50%);
     margin: 0 auto;
     border-radius: 10px;
     padding: 10px 30px 30px 10px;
-  }
-
-  #day {
-    text-align: center;
-    font-size: 25px;
-  }
-
-  #time {
-    text-align: center;
-    font-size: 25px;
   }
 
   #city {
@@ -111,6 +112,8 @@
   #chronology {
     display: block;
     text-align: center;
+    font-size: 15px;
+    font-weight: 700;
 
   }
 
@@ -136,20 +139,16 @@
 
   footer {
     text-align: center;
-    color: #ffffff;
+    color: #000000;
     font-size: 14px;
     font-family: 'Courier New', Courier, monospace;
 
-    a:link {
-      color: #ffffff;
-      text-decoration: underline;
-
-    }
+  }
 </style>
 
-<body>
+<body class="cool">
 
-  <div id="container">
+  <div id="container" class="cool">
     <header>
 
       <h1 id="city">London</h1>
