--- a/drafting.html
+++ b/drafting.html
@@ -199,10 +199,10 @@
     <br />
 
     <footer>
-      [<strong>Badly</strong>] designed and [<em>lovingly</em>] coded by <a href="#" target="_blank">Sophie Osiecki</a>
-      | open-source on <a href="#" target="_blank">GitHub</a> | hosted by <a
-        href="file:///Users/sophie/Library/Mobile%20Documents/com~apple~CloudDocs/0.%20Coding/current-weather-app/current-weather-app/index.html?"" target="
-        _blank">Netlify</a>
+      [<strong>Badly</strong>] designed and [<em>lovingly</em>] coded by <a href="https://github.com/sophieosiecki"
+        target="_blank">Sophie Osiecki</a>
+      | open-source on <a href="https://github.com/sophieosiecki/current-weather-app" target="_blank">GitHub</a> |
+      hosted by <a href="#">Netlify</a>
       <p>
         <strong>© Sophie Osiecki</strong>
         <br />
