removed extra script tags and changed wording in footer

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     [<strong>Badly</strong>] designed and [<em>lovingly</em>] coded by <a href="https://github.com/sophieosiecki"
      target="_blank">Sophie Osiecki</a>
     | open-source on <a href="https://github.com/sophieosiecki/current-weather-app" target="_blank">GitHub</a> |
-    hosted by <a href="#">Netlify</a>
+    hosted on <a href="#">Netlify</a>
     <p>
      <strong>© Sophie Osiecki</strong>
      <br />
@@ -222,9 +222,7 @@
    </footer>
   </div>
 
-  <script>
 
-  </script>
 
 
  </body>
