--- a/drafting.html
+++ b/drafting.html
@@ -202,7 +202,7 @@
       [<strong>Badly</strong>] designed and [<em>lovingly</em>] coded by <a href="https://github.com/sophieosiecki"
         target="_blank">Sophie Osiecki</a>
       | open-source on <a href="https://github.com/sophieosiecki/current-weather-app" target="_blank">GitHub</a> |
-      hosted by <a href="#">Netlify</a>
+      hosted on <a href="https://sophie-city-weather.netlify.app/">Netlify</a>
       <p>
         <strong>© Sophie Osiecki</strong>
         <br />
