Changing theme and visuals depending on temperature
added some margin to the current temperature and units as they weren't displaying properly with the icon.
Added the changing emoji, icon and theme functions

--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
  <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
 </head>
 
-<body class="cool">
+<body class="warm cool">
 
- <div id="container" class="cool">
+
+ <div id="container" class="warm cool">
   <header>
    <h1 id="city"></h1>
    <div class="flex-temperature">
-    <div id="icon">❄️</div>
+    <div id="icon"></div>
     <div id="current-temperature">
 
     </div>
-    <div class="units-metric" id="units-current-temp"><strong>˚C</strong>/˚F</div>
+    <div class="units-metric" id="units-current-temp"><strong>˚C</strong></div>
    </div>
    <br />
    <div id="weather-description">
@@ -75,6 +76,8 @@
    </p>
   </footer>
   <script src="src/app.js"></script>
+ </div>
+
 </body>
 
 </html>
