Removed placeholder text in HTML, added last update time, and error handling for inputting invalid city

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     </div>
     <div class="units-metric" id="units-current-temp"><strong>˚C</strong></div>
    </div>
-   <br />
    <div id="weather-description">
-    Cloudy, with a chance of meatballs
    </div>
    <br />
    <div id="feels-like">
@@ -46,10 +44,12 @@
     <div class="humidity"><span>Humidity: </span><strong><span id="humidity"></strong>%<span></div>
    </div>
    <br />
-
+   <div id="last-update">
+    Last updated:<span id="last-update-time"></span>
+   </div>
+   <br />
    <div id="chronology">
     <span id="day">
-     Wednesday
     </span>,
     <span id="time">
     </span>
