added a class center-align, and added that countries show up as well

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
  <div id="container" class="warm cool">
   <header>
-   <h1 id="city"></h1>
+   <h1 class="center-align"><span id="city"></span>, <span id="country"></span></h1>
+
    <div class="flex-temperature">
     <div id="icon"></div>
     <div id="current-temperature">
