Functionality where the app disappears when a city is incorrectly inputted, added some changes to the styling too

--- a/index.html
+++ b/index.html
@@ -18,20 +18,22 @@
 
 
  <div id="container" class="warm cool">
+  <h1 class="center-align"><span id="city"></span> </h1>
+  <h2><span id="country"></span></h2>
   <header>
-   <h1 class="center-align"><span id="city"></span>, <span id="country"></span></h1>
+
 
    <div class="flex-temperature">
     <div id="icon"></div>
     <div id="current-temperature">
 
     </div>
-    <div class="units-metric" id="units-current-temp"><strong>˚C</strong></div>
+    <div class="center-align" id="units-current-temp"><strong>˚C</strong></div>
    </div>
    <div id="weather-description">
    </div>
    <br />
-   <div id="feels-like">
+   <div class="center-align" id="feels-like">
     <em><span id="feels-like-text">Feels like:</span></em>
     <strong><span id="feels-like-temperature"></span></strong>
     <span class="units-metric" id="units-feels-like">˚C</span>
@@ -57,6 +59,8 @@
    </div>
    <br />
   </header>
+
+
 
   <main>
    <form id="form">
