Created README.txt and updated link in the footer

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
   <footer>
    Designed and coded by <a href="https://github.com/sophieosiecki" target="_blank">Sophie Osiecki</a>
    | open-source on <a href="https://github.com/sophieosiecki/current-weather-app" target="_blank">GitHub</a> |
-   hosted on <a href="https://sophie-city-weather.netlify.app/">Netlify</a>
+   hosted on <a href="https://sophie-precise-cityweather.netlify.app/"">Netlify</a>
    <p>
     <strong>© Sophie Osiecki</strong>
     <br />
     [who is <em>not</em> a designer]
    </p>
   </footer>
-  <script src="src/app.js"></script>
+  <script src=" src/app.js"></script>
  </div>
 
 </body>
